--- a/vue/mesannonces/mesannonces.css
+++ b/vue/mesannonces/mesannonces.css
@@ -144,7 +144,7 @@ p {
 
 @media screen and (max-width: 1000px) {
     .grille {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .annonce-item {
